--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,32 @@
   <link rel="stylesheet" href="/app.css">
 </head>
 <body>
-  <h1>stuff</h1>
-  <h3>fuck</h3>
-  <h2>crap</h2>
+
+  <div class="user-card">
+    <div class="user-card__top">
+      <p class="user-card__top-icon"><i class="fa fa-arrow-left" aria-hidden="true"></i></p>
+      <img src="http://www.placecera.com/200/200" alt="" class="user-card__top-pic">
+    </div>
+    <div class="user-card__bottom">
+      <div class="user-card__info">
+        <span class="user-card__info-icon"><i class="fa fa-user" aria-hidden="true"></i></span>
+        <span class="user-card__info-text">user name</span>
+      </div>
+      <div class="user-card__info">
+        <span class="user-card__info-icon"><i class="fa fa-envelope" aria-hidden="true"></i></span>
+        <span class="user-card__info-text">user email</span>
+      </div>
+      <div class="user-card__info">
+        <span class="user-card__info-icon"><i class="fa fa-mobile" aria-hidden="true"></i></span>
+        <span class="user-card__info-text">user mobile</span>
+      </div>
+      <div class="user-card__info">
+        <span class="user-card__info-icon"><i class="fa fa-globe" aria-hidden="true"></i></span>
+        <span class="user-card__info-text">user location</span>
+      </div>
+    </div>
+  </div>
+
   <script src="/app.js" charset="utf-8"></script>
 </body>
 </html>
