--- a/public/index.html
+++ b/public/index.html
@@ -20,19 +20,19 @@
         <div class="user-card__bottom">
           <div class="user-card__info">
             <span class="user-card__info-icon"><i class="fa fa-user" aria-hidden="true"></i></span>
-            <span class="user-card__info-name">user name</span>
+            <span class="user-card__info-text user-card__info-name">user name</span>
           </div>
           <div class="user-card__info">
             <span class="user-card__info-icon"><i class="fa fa-envelope" aria-hidden="true"></i></span>
-            <span class="user-card__info-email">user email</span>
+            <span class="user-card__info-text user-card__info-email">user email</span>
           </div>
           <div class="user-card__info">
             <span class="user-card__info-icon"><i class="fa fa-mobile" aria-hidden="true"></i></span>
-            <span class="user-card__info-mobile">user mobile</span>
+            <span class="user-card__info-text user-card__info-mobile">user mobile</span>
           </div>
           <div class="user-card__info">
             <span class="user-card__info-icon"><i class="fa fa-globe" aria-hidden="true"></i></span>
-            <span class="user-card__info-location">user location</span>
+            <span class="user-card__info-text user-card__info-location">user location</span>
           </div>
         </div>
       </div>
